Implementing Bootstrap and CSS to HTML Pages

--- a/Static/html/HomePage.css
+++ b/Static/html/HomePage.css
@@ -3,9 +3,9 @@
     background-color: saddlebrown;
 }
 
-.container 
-{
-    background-color: floralwhite;
+.container {
+    background-color: white;
+    background-image: url('successful-budgeting-main.jpg');
 }
 .centered-image
 {
