Implementing CSS and Bootstrap

--- a/Static/html/HomePage.css
+++ b/Static/html/HomePage.css
@@ -4,8 +4,8 @@
 }
 
 .container {
-    background-color: white;
-    background-image: url('successful-budgeting-main.jpg');
+    background-color: blueviolet;
+  
 }
 .centered-image
 {
