"Created a database using entity framework"

--- a/directory/ExpenseTrack/ExpenseTrack/Views/Profile/Expense.cshtml
+++ b/directory/ExpenseTrack/ExpenseTrack/Views/Profile/Expense.cshtml
@@ -7,16 +7,24 @@
         <h1>Expenses Category </h1>
 
         <form>
-            Expense Amount:<br>
+            Expense ID:<br>
             <input type="number" id="expenseamount">
             <br>
-            Total Expenses:<br>
-            <input type="number" id="totalexpenses">
-            <br />
+            Date:<br>
+            <input type="date"   id="expenseamount">
+            <br>
+            Description:<br>
+            <input type="text" id="expenseamount">
+            <br>
+            Amount:<br>
+            <input type="number" id="expenseamount">
+            <br>
+
+            
 
             <br />
 
-            Remaining Expense Amount:<br />
+            Total Expenses:<br />
             <input type="number" id="total">
             <br />
 
